tests/baselines/reference/moduleClassArrayCodeGenTest.errors.txt
tests/cases/compiler/moduleClassArrayCodeGenTest.ts(10,9): error TS2305: Module 'M' has no exported member 'B'.


==== tests/cases/compiler/moduleClassArrayCodeGenTest.ts (1 errors) ====
    // Invalid code gen for Array of Module class
    
    module M
    {
        export class A { }
        class B{ }
    }
    
    var t: M.A[] = [];
    var t2: M.B[] = [];
            ~~~
!!! error TS2305: Module 'M' has no exported member 'B'.